<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_how_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_how_about"
        android:layout_marginTop="70dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_choose"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_how_about" />
    <TextView
        android:id="@+id/tv_deliver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_deliver"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose" />
    <ImageView
        android:id="@+id/iv_happy"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_happy"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_deliver" />
    <TextView
        android:id="@+id/tv_happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_happy"
        android:layout_marginTop="5dp"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_happy" />
    <ImageView
        android:id="@+id/iv_excited"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_excited"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_happy" />
    <TextView
        android:id="@+id/tv_excited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_excited"
        android:layout_marginTop="5dp"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_excited" />
    <ImageView
        android:id="@+id/iv_common"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_common"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_excited" />
    <TextView
        android:id="@+id/tv_common"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_common"
        android:layout_marginTop="5dp"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_common" />
    <ImageView
        android:id="@+id/iv_nervous"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_nervous"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_common" />
    <TextView
        android:id="@+id/tv_nervous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_nervous"
        android:layout_marginTop="5dp"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_nervous" />
    <ImageView
        android:id="@+id/iv_mad"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_mad"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nervous" />
    <TextView
        android:id="@+id/tv_mad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_mad"
        android:layout_marginTop="5dp"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_mad" />

</androidx.constraintlayout.widget.ConstraintLayout>